--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "parcel": "^2.0.0-rc.0",
+    "parcel-transformer-ts-css-modules": "^1.0.6",
     "prettier": "^2.4.1"
   },
   "dependencies": {
